tests/errors/poisoning/cascade-unary.fn
---
Description: Unary on undefined value should not report operator not found
Expected: FN3204
---

type Program
{
    fn Main -> i32
    {
        var x = -undefined_val
        return 0
    }
}
